--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Report a bug you found
-title: "[Bug]: "
+title: "[Bug Title here]: "
 labels: "bug"
 body:
   - type: markdown
